--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "instafeed.js": "^1.4.1",
     "jit-grunt": "^0.10.0",
     "load-grunt-tasks": "^3.5.2",
+    "node-sass": "^4.11.0",
     "time-grunt": "^1.4.0"
   }
 }
