--- a/package.json
+++ b/package.json
@@ -1,40 +1,33 @@
 {
-  "name": "reddust",
-  "version": "0.0.1",
+  "name": "hannahsuttondesign",
+  "version": "0.0.2",
   "repository": {
     "type": "git",
-    "url": "https://github.com/janwerkhoven/reddust.org.au"
+    "url": "git@github.com:janwerkhoven/hannahsuttondesign.com.git"
   },
   "private": true,
-  "copyright": "https://github.com/janwerkhoven/reddust.org.au/blob/production/COPYRIGHT.md",
+  "copyright": "https://github.com/janwerkhoven/hannahsuttondesign.com/blob/production/COPYRIGHT.md",
   "devDependencies": {
     "async": "^1.0.0",
-    "autoprefixer": "^6.3.7",
-    "babel-preset-es2015": "^6.18.0",
-    "grunt": "^1.0.1",
-    "grunt-babel": "^6.0.0",
-    "grunt-concurrent": "^2.3.1",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-eslint": "0.0.5",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-handlebars-layouts": "^0.2.7",
+    "cssnano": "^3.4.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "^0.10.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-handlebars-layouts": "^0.2.0",
     "grunt-html-prettyprinter": "^1.5.0",
-    "grunt-inline-css": "^0.1.5",
-    "grunt-postcss": "^0.7.2",
-    "grunt-sass": "^1.2.1",
-    "grunt-static-handlebars": "^0.9.0",
+    "grunt-postcss": "^0.7.1",
+    "grunt-sass": "^3.0.1",
     "grunt-text-replace": "^0.4.0",
     "grunt-xml-sitemap": "^0.2.0",
-    "gruntify-eslint": "^3.1.0",
     "handlebars-helpers": "^0.5.8",
-    "instafeed.js": "^1.4.1",
-    "jit-grunt": "^0.10.0",
-    "load-grunt-tasks": "^3.5.2",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.9.2",
+    "pixrem": "^3.0.0",
+    "prettier": "^1.14.2",
     "time-grunt": "^1.4.0"
   }
 }
