Update nginx config to .com instead of .com.au

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ server
   server_name www.hannahsuttondesign.com;
   server_name www.hannahsuttondesign.com.au;
 
-  return 301 https://hannahsuttondesign.com.au$request_uri;
+  return 301 https://hannahsuttondesign.com$request_uri;
 }
 
 server
@@ -18,18 +18,18 @@ server
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
 
-  server_name hannahsuttondesign.com.au;
+  server_name hannahsuttondesign.com;
 
-  root /var/www/hannahsuttondesign.com.au/dist;
+  root /var/www/hannahsuttondesign.com/dist;
   index index.html;
 
-  ssl_certificate /etc/letsencrypt/live/hannahsuttondesign.com.au/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/hannahsuttondesign.com.au/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/hannahsuttondesign.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/hannahsuttondesign.com/privkey.pem;
   include /etc/letsencrypt/options-ssl-nginx.conf;
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-  access_log /var/log/nginx/hannahsuttondesign.com.au.access.log;
-  error_log /var/log/nginx/hannahsuttondesign.com.au.error.log;
+  access_log /var/log/nginx/hannahsuttondesign.com.access.log;
+  error_log /var/log/nginx/hannahsuttondesign.com.error.log;
 
   location /
   {
