--- a/nginx.conf
+++ b/nginx.conf
@@ -4,11 +4,11 @@ server
   listen [::]:80;
 
   server_name hannahsutton.com.au
-  server_name hannahsuttondesign.com;
-  server_name hannahsuttondesign.com.au;
+  server_name hannahsuttondesign.com
+  server_name hannahsuttondesign.com.au
   server_name www.hannahsutton.com.au
-  server_name www.hannahsuttondesign.com;
-  server_name www.hannahsuttondesign.com.au;
+  server_name www.hannahsuttondesign.com
+  server_name www.hannahsuttondesign.com.au
 
   return 301 https://hannahsuttondesign.com$request_uri;
 }
