Add missing ; to nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,12 +3,12 @@ server
   listen 80;
   listen [::]:80;
 
-  server_name hannahsutton.com.au
-  server_name hannahsuttondesign.com
-  server_name hannahsuttondesign.com.au
-  server_name www.hannahsutton.com.au
-  server_name www.hannahsuttondesign.com
-  server_name www.hannahsuttondesign.com.au
+  server_name hannahsutton.com.au;
+  server_name hannahsuttondesign.com;
+  server_name hannahsuttondesign.com.au;
+  server_name www.hannahsutton.com.au;
+  server_name www.hannahsuttondesign.com;
+  server_name www.hannahsuttondesign.com.au;
 
   return 301 https://hannahsuttondesign.com$request_uri;
 }
