--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "reddust",
+  "name": "hannahsuttondesign",
   "devDependencies": {
     "outdated-browser": "^1.1.3",
     "jquery": "^3.1.0",
