--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "grunt-html-prettyprinter": "^1.5.0",
     "grunt-inline-css": "^0.1.5",
     "grunt-postcss": "^0.7.2",
-    "grunt-sass": "^1.2.1",
+    "grunt-sass": "^3.0.1",
     "grunt-static-handlebars": "^0.9.0",
     "grunt-text-replace": "^0.4.0",
     "grunt-xml-sitemap": "^0.2.0",
@@ -34,6 +34,7 @@
     "instafeed.js": "^1.4.1",
     "jit-grunt": "^0.10.0",
     "load-grunt-tasks": "^3.5.2",
+    "node-sass": "^4.11.0",
     "time-grunt": "^1.4.0"
   }
 }
