--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,7 @@
     "jquery": "^3.1.0",
     "normalize-css": "^5.0.0",
     "velocity": "^1.3.1",
-    "countUp.js": "^1.8.1",
-    "instafeed.js": "^1.4.1"
+    "countUp.js": "^1.8.1"
   },
   "dependencies": {
     "normalize-css": "^5.0.0"
