--- a/remote/nginx-https.conf
+++ b/remote/nginx-https.conf
@@ -10,7 +10,7 @@ server
   server_name www.hannahsuttondesign.com;
   server_name www.hannahsuttondesign.com.au;
 
-  return 301 https://www.hannahsuttondesign.com$request_uri;
+  return 301 https://hannahsuttondesign.com$request_uri;
 }
 
 server
@@ -20,19 +20,26 @@ server
 
   server_name www.hannahsuttondesign.com;
 
-  root /var/www/hannahsuttondesign.com/dist;
-  index index.html;
-
   ssl_certificate /etc/letsencrypt/live/www.hannahsuttondesign.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/www.hannahsuttondesign.com/privkey.pem;
   include /etc/letsencrypt/options-ssl-nginx.conf;
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-  access_log /var/log/nginx/hannahsuttondesign.com.access.log;
-  error_log /var/log/nginx/hannahsuttondesign.com.error.log;
+  return 301 https://hannahsuttondesign.com$request_uri;
+}
 
-  location /
-  {
-    try_files $uri $uri/ =404;
-  }
+server
+{
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+
+  server_name hannahsuttondesign.com;
+
+  root /var/www/hannahsuttondesign.com/dist;
+  index index.html;
+
+  ssl_certificate /etc/letsencrypt/live/hannahsuttondesign.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/hannahsuttondesign.com/privkey.pem;
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
