Add yarn serve, build and setup commands

--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "yarn": ">= 1.0.0"
   },
   "scripts": {
+    "serve": "gulp serve",
+    "build": "gulp build",
+    "setup": "remote/setup.sh",
     "precommit": "lint-staged",
     "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'bower_components', 'junction') } catch (e) { }\"",
     "prettify-repo": "prettier --write \"*/**/*.{css,scss,js,json,md}\""
